[tool.poetry]
name = "cfn-guard-wrapper"
version = "0.1.0"
description = ""
authors = ["Ben Bridts"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.6.0"
appdirs = "^1.4.4"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cfn-guard-wrapper = 'cfn_guard_wrapper.cli:program.run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
